--- a/FindYourWayAPI/appsettings.json
+++ b/FindYourWayAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnetion": "Server=(localdb)\\mssqllocaldb;Database=FindYourWayDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "Default": "Server=(localdb)\\mssqllocaldb;Database=FindYourWayDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
